--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Jogo da Nave com jQuery</title>
+    <title>Asteroids</title>
     <link rel="stylesheet" href="css/style.css">
-    <!-- Substitua o CDN pelos arquivos locais -->
     <script src="js/jquery-3.6.4.min.js"></script>
     <script src="js/jquery-collision.min.js"></script>
 </head>
@@ -13,7 +12,7 @@
         <div id="gameArea">
             <div id="inicio">
                 <h1>Asteroids</h1>
-                <p>Use as setas para mover e ESPAÇO para atirar</p>
+                <p>Use W, D e A para mover e segure ESPAÇO para atirar.</p>
                 <p>Clique para começar!</p>
             </div>
             <canvas id="gameCanvas" width="800" height="600"></canvas>
